--- a/Sunny/9999/lotto_flask/lotto/templates/base.html
+++ b/Sunny/9999/lotto_flask/lotto/templates/base.html
@@ -9,6 +9,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,800" rel="stylesheet" />
   <link href="/static/css/main.css" rel="stylesheet" />
+  <link href="/static/css/lotto.css" rel="stylesheet" />
   <style>
     .img1{
       background-image: url('/static/img/3.jpg');
