--- a/Sunny/9999/wysiwyg2/editor/templates/base.html
+++ b/Sunny/9999/wysiwyg2/editor/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/static/css/sidebar.css">
     <link rel="stylesheet" href="/static/css/summernote.min.css">
     <link rel="stylesheet" href="/static/css/summernote-bs4.css">
+    <link rel="stylesheet" href="/static/css/table.css">
     <title>productrevise</title>
 <style>
     
@@ -16,13 +17,20 @@
 </head>
 <body class="productbody">
     <nav class="navbar navbar-expand-lg navbar-light bg-blueway  flex-md-nowrap">
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/" style="color:black">Productrevise</a>
+        <a class="navbar-brand col-sm-5 col-md-2 mr-0" href="/" style="color:black">Productrevise</a>
     </nav>
 
 
 {% block body %}
 {% endblock %}    
-
+  <!-- Footer -->
+  <!--<footer class="d-flex justify-content-center mt-auto bg-blueway fixed-bottom">
+    <div class="container">
+      <p class="m-2 text-center" text-black">DaebakCompany</p>
+    </div>
+    __>
+    <!-- /.container -->
+  </footer>
 <script src="/static/js/jquery-3.5.1.min.js"></script>
 <script src="/static/js/popper.min.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
@@ -30,70 +38,11 @@
 <script src="/static/js/feather.min.js"></script>
 <script src="/static/js/summernote.min.js"></script>
 <script src="/static/js/summernote-bs4.js"></script>
+<script src="/static/js/bootstrap.bundle.min.js"></script>
+<script src="/static/js/summernote.js"></script>
+<script src="/static/js/summernote2.js"></script>
 <script>
     feather.replace()
 </script>
-<script>
-    $(document).ready(function(){
-      $('#Title').summernote({
-        height: 20,
-        airMode:true
-      });
-      $('#Body_HTML').summernote({
-        height: 800,
-      });
-      $('#Tag').summernote({
-        height: 20,
-        airMode:true
-      });
-      $('#Published').summernote({
-        height: 20,
-        airMode:true
-      });
-      $('#Price').summernote({
-        height: 20,
-        airMode:true
-      });
-
-      $('#Option1_name').summernote({
-        height: 20,
-        airMode:true
-      });
-      $('#Option2_name').summernote({
-        height: 20,
-        airMode:true
-      });
-      $('#Option3_name').summernote({
-        height: 20,
-        airMode:true
-      });
-      $('#Option1_value').summernote({
-        height: 20,
-        airMode:true
-      });
-      $('#Option2_value').summernote({
-        height: 20,
-        airMode:true
-      });
-      $('#Option3_value').summernote({
-        height: 20,
-        airMode:true
-      });
-      $('#Sku').summernote({
-        height: 20,
-        airMode:true
-      });
-      $('#Compare_price').summernote({
-        height: 20,
-        airMode:true
-      });
-      $('#Costperitem').summernote({
-        height: 20,
-        airMode:true
-      });
-      
-
-    })
-  </script>
 </body>
 </html>
