--- a/Sunny/9999/wysiwyg2/editor/templates/product.html
+++ b/Sunny/9999/wysiwyg2/editor/templates/product.html
@@ -1,71 +1,65 @@
 {% extends 'base.html' %}
 {% block body %}
-{% if handle_list %}
-<div class="container-fluid">
-  <div class="row">
-    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-      <div class="sidebar-sticky">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link text">
-              <span data-feather="file"></span></span>
-              Handle 
-          </li>
-          {% for handle in handle_list %}
-          <li class="nav-item">
-            <a class="nav-link" href="/product/{{handle}}">
-              {{ handle }}
-            </a>
-          </li>
-          {% endfor %}
-        </ul>
-  
 
-
-      </div>
-    </nav>
-
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Dashboard</h1>
-        <div class="btn-toolbar mb-2 mb-md-0">
-          <div class="btn-group mr-2">
-            <button class="btn btn-sm btn-outline-secondary">Share</button>
-          </div>
+    <main role="main" class="px-4">
+      <form action="/product_update" method="POST">
+        <div>
+          <small>revise times:</small>
+          <input id="revise_times" name="revise_times" value="{{product_list[0]['revise']}}" readonly> 
+          <br>
+          {% if product_list[0]['revise_last_time'] != "1" %} 
+          <small>revise last time:</small>
+          <input id="revise_last_time" name="revise_last_time" value="{{product_list[0]['revise_last_time']}}" readonly>  
+          {% endif %}
+          <br>
+          <input class="btn btn-sm btn-outline-secondary" type="submit" value="revise">
         </div>
-      </div>
-
-    
-      <h2>Section title</h2>
-      <div class="table-responsive">
-      </div>
-      {% elif product_list %}
-      <form action="/">
-        <p>{{product_list[0]['id']}}</p>
-        <textarea name="Title" id="Title">
-          {{product_list[0]['title']}}
-        </textarea>
-        <textarea name="Body_HTML" id="Body_HTML">
+        <table style="width:1000px;font-size:2em">
+          <tr>
+            <td>title:</td>     
+            <td>
+            <textarea name="title" class="Title" style="width:100%">
+            {{product_list[0]['title']}}
+            </textarea>
+          </td>
+          </tr>   
+        </table>
+        <textarea class="Body_HTML" name="body_HTML" >
           {{product_list[0]['body_HTML']}}
         </textarea>
-        <textarea name="Tag" id="Tag">
-          {{product_list[0]['tag']}}
-        </textarea>
-        <textarea name="Published" id="Published">
-          {{product_list[0]['published']}}
-        </textarea>
-        <textarea name="Price" id="Price">
-          {{product_list[0]['variant_price']}}
-        </textarea>
-        <textarea name="Option1_name" id="Option1_name">
-          {{product_list[0]['option1_name']}}
-        </textarea>
+        {% for num in range(product_list_value) %}
+        <table class="revise">
+          <tr class="revise">
+            <td class="revise">
+              <textarea type="text" class="Id" name="id" readonly>{{product_list[num]['id']}}</textarea>
+              </td>
+            <td class="revise">색상</td>
+            <td>        
+              <textarea class="Option1_value" name="option1_value">
+              {{product_list[num]['option1_value']}}
+            </textarea>
+          </td>
+            <td class="revise">사이즈</td>
+            {% if product_list[num]['option2_value'] %}
+            <td class="revise"><textarea class="Option2_value" name="option2_value">
+              {{product_list[num]['option2_value']}}
+            </textarea></td>
+            {% else %}
+            <td class="revise">사이즈가 없음</td>
+            {% endif %}
+            <td class="revise">가격</td>
+            <td class="revise">        
+              <textarea class="Price" name="price">
+              {{product_list[num]['variant_price']}}
+            </textarea>
+          </td>
+          </tr>
+        {% endfor %}
         
+      </table>
       </form>
-      {% endif %}
     </main>
-  </div>
-</div>
 
 
+  
 {% endblock %} 
