--- a/Sunny/9999/wysiwyg2/editor/static/css/table.css
+++ b/Sunny/9999/wysiwyg2/editor/static/css/table.css
@@ -6,4 +6,11 @@ table.revise {
   table.revise, th.revise, td.revise {
     border: 0.1px solid black;
     font-size: 1.5em;
+    table-layout: fixed;
+  }
+
+  td.norevise {
+    border: 0.1px solid black;
+    font-size: 1.5em;
+    width: 200px;
   }
