--- a/Sunny/9999/wysiwyg3/editor/templates/base.html
+++ b/Sunny/9999/wysiwyg3/editor/templates/base.html
@@ -23,7 +23,14 @@
 
 {% block body %}
 {% endblock %}    
-  
+  <!-- Footer -->
+  <!--<footer class="d-flex justify-content-center mt-auto bg-blueway fixed-bottom">
+    <div class="container">
+      <p class="m-2 text-center" text-black">DaebakCompany</p>
+    </div>
+    __>
+    <!-- /.container -->
+  </footer>
 <script src="/static/js/jquery-3.5.1.min.js"></script>
 <script src="/static/js/popper.min.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
