--- a/Sunny/Python/Flask/templates/home.html
+++ b/Sunny/Python/Flask/templates/home.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daebak AI Home</title>
+    <title>Em</title>
 </head>
 <body>
-    
+    <h1>job search</h1>
+    <form action="/report" method="get">
+        <input type="text" name="word"  placeholder="what job do you want?" required>
+        <button>Search</button>
+    </form>
 </body>
 </html>
